--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "jest": "^26.6.3",
     "jest-runner-eslint": "^0.10.0",
     "lerna": "^4.0.0",
-    "react": "^16.14.0 || ^17.0.2",
+    "react": "^16.14.0 || ^17.0.2 || ^18.0.0",
     "react-dnd": "^13.1.1",
     "react-dnd-html5-backend": "^12.1.1",
     "react-dnd-test-backend": "^12.0.0",
